<resources>
    <string name="app_name">儿童智能牙刷系统</string>
    <string name="duck">小鸭子</string>
    <string name="car">小汽车</string>
    <string name="block">积木</string>
    <string name="rabbit">小兔</string>
    <string name="ball">玩具球</string>
    <string name="windmill">风车</string>
    <string name="transformer">变形金刚</string>
    <string name="hello_kitty">Hello Kitty</string>
    <string name="yellow_duck">小黄鸭\n（程序员测试用）</string>
    <string name="bear">小熊</string>
    <string name="superman">超人</string>
    <string name="doraemon">哆啦A梦</string>
    <string name="award_view_description">积分好礼</string>
    <string name="user_name_default">User Name</string>
    <string name="number_default">0</string>
    <string name="award_view_my_award">我的奖品</string>
    <string name="award_view_big_award">精品好礼</string>
    <string name="award_view_medium_award">趣味好物</string>
    <string name="award_view_little_award">休闲小品</string>
    <string name="award_view_note">所有图片仅供参考，具体以实物为准</string>
    <string name="brush_view_description">刷牙</string>
    <string name="brush_view_toothbrush_management">牙刷管理</string>
    <string name="brush_view_start_brush">开始刷牙</string>
    <string name="toothbrush_view_description">牙刷管理</string>
    <string name="edit">编辑</string>
    <string name="goal_view_description">我的目标</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_repeat_password">请再输入一次密码</string>
    <string name="show_password">显示密码</string>
    <string name="recommend_view_description">口腔护理知识推荐</string>
    <string name="recommend_view_note">所有推荐信息为网络上内容，与本平台无关，谨防上当受骗</string>
    <string name="user_view_description">账号管理</string>
    <string name="user_view_add_user">添加或注册新用户</string>
    <string name="award_name_default">Unknown Award</string>
    <string name="award_buy">兑换</string>
    <string name="goal_description">目标描述</string>
    <string name="set_goal">设为目标</string>
    <string name="goal_award">完成奖励</string>
    <string name="recommend_content">推荐内容</string>
    <string name="source">来源：</string>
    <string name="update_date">更新日期：</string>
    <string name="toothbrush_id">牙刷编号</string>
    <string name="remove">移除</string>
    <string name="star_yesterday">昨日得星</string>
    <string name="star_today">今日得星</string>
    <string name="setting_show_recommend">显示口腔护理知识推荐</string>
    <string name="setting_theme">主题设置</string>
    <string name="about">关于本系统</string>
    <string name="app_org">智能人机交互</string>
</resources>
