<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_blue_stroke"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/textViewRecommendItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/recommend_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRecommendItemSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/source"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewRecommendItemTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecommendItemTitle" />

    <TextView
        android:id="@+id/textViewRecommendItemUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/update_date"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRecommendItemSource"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewRecommendItemSource" />

</android.support.constraint.ConstraintLayout>