<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBoyLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="36dp"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_back"
            android:onClick="onClickBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAboutViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/about"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewAppVersion"
        app:layout_constraintEnd_toEndOf="@+id/textViewAppVersion"
        app:layout_constraintStart_toStartOf="@+id/textViewAppVersion" />

    <TextView
        android:id="@+id/textViewAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutTopBar" />

    <TextView
        android:id="@+id/textViewAppOrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_org"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAppVersion"
        app:layout_constraintStart_toStartOf="@+id/textViewAppVersion"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppVersion" />

</android.support.constraint.ConstraintLayout>